# eoseon-iligo-AI

./: .env  .pre-commit-config.yaml  GEMINI.md  README.md  pyproject.toml  test.ipynb
app/application/: dto.py  ports.py
app/application/use_cases/: generate_document.py
app/domain/: models.py
app/infrastructure/: config.py
app/infrastructure/renderers/: docx_renderer.py  hwpx_renderer.py
app/infrastructure/utils/: zip_utils.py
app/interfaces/http/: main.py  schemas.py
templates/: hwpx_template.hwpx
